@@ -1,3 +1,4 @@
+import org.gradle.internal.os.OperatingSystem
 import org.jetbrains.kotlin.gradle.dsl.JvmTarget
 
 plugins {
@@ -16,10 +17,8 @@ kotlin {
         compilerOptions {
             jvmTarget.set(JvmTarget.JVM_21)
         }
-        binaries {
-            executable {
-                mainClass.set("cn.enaium.mahonoto.MainKt")
-            }
+        mainRun {
+            mainClass = "cn.enaium.mahonoto.MainKt"
         }
     }
 
@@ -54,4 +53,11 @@ tasks.register<JavaExec>("generateAtlas") {
         rootProject.file("assets/fonts/317_黑体.ttf").absolutePath,
         rootProject.file("assets/fonts").absolutePath,
     )
+}
+
+
+tasks.withType(JavaExec::class.java).configureEach {
+    if (OperatingSystem.current().isMacOsX && name == "jvmRun") {
+        jvmArgs("--enable-native-access=ALL-UNNAMED", "-XstartOnFirstThread")
+    }
 }
